# Multi-Document-Graph-Visualizer

./: .gitignore  Dockerfile  Makefile  Makefile.docker  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  start.sh
viz/: package-lock.json
